adição das apis de endereço, refatoração de alguns testes e atualização documentação swagger
